@@ -1,6 +1,6 @@
 {
   "name": "simp-tlog",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "author": "simp",
   "summary": "A module for managing Tlog",
   "license": "Apache-2.0",
@@ -17,22 +17,22 @@
   "dependencies": [
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 3.10.0 < 5.0.0"
+      "version_requirement": ">= 4.9.0 < 5.0.0"
     },
     {
       "name": "puppetlabs/stdlib",
-      "version_requirement": ">= 8.0.0 < 9.0.0"
+      "version_requirement": ">= 8.0.0 < 10.0.0"
     }
   ],
   "simp": {
     "optional_dependencies": [
       {
         "name": "simp/logrotate",
-        "version_requirement": ">= 6.4.0 < 7.0.0"
+        "version_requirement": ">= 6.5.0 < 7.0.0"
       },
       {
         "name": "simp/rsyslog",
-        "version_requirement": ">= 7.5.0 < 9.0.0"
+        "version_requirement": ">= 7.6.0 < 9.0.0"
       }
     ]
   },
@@ -74,7 +74,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 6.22.1 < 8.0.0"
+      "version_requirement": ">= 7.0.0 < 9.0.0"
     }
   ]
 }
